2010-08-10  Patrick Gansterer  <paroga@paroga.com>

        Reviewed by David Levin.

        [WINCE] Buildfix for CE 6.0
        https://bugs.webkit.org/show_bug.cgi?id=43027

        CE 6.0 doesn't define localtime in the system include files.

        * wtf/Platform.h: Include ce_time.h on all OS(WINCE).

2010-08-10  Gavin Barraclough  <barraclough@apple.com>

        Rubber stamped by Sam Weinig.

        Bug 43786 - Move AtomicStringHash from WebCore to WTF
        Also remove deprecated string headers from WebCore/platform/text.

        * GNUmakefile.am:
        * JavaScriptCore.gypi:
        * JavaScriptCore.vcproj/WTF/WTF.vcproj:
        * JavaScriptCore.xcodeproj/project.pbxproj:
        * wtf/text/AtomicString.h:
        * wtf/text/AtomicStringHash.h: Copied from WebCore/platform/text/AtomicStringHash.h.

2010-08-09  Oliver Hunt  <oliver@apple.com>

        Fix Qt/ARM again, this time including the other changed file.

        * jit/JIT.h:

2010-08-09  Oliver Hunt  <oliver@apple.com>

        Fix Qt/ARM

        C++ overload resolution I stab at thee

        * jit/JITInlineMethods.h:
        (JSC::JIT::beginUninterruptedSequence):
        (JSC::JIT::endUninterruptedSequence):

2010-08-09  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        Allow an assembler/macroassembler to compact branches to more concise forms when linking
        https://bugs.webkit.org/show_bug.cgi?id=43745

        This patch makes it possible for an assembler to convert jumps into a different
        (presumably more efficient) form at link time.  Currently implemented in the
        ARMv7 JIT as that already had logic to delay linking of jumps until the end of
        compilation already.  The ARMv7 JIT chooses between either a 4 byte short jump
        or a full 32-bit offset (and rewrites ITTT instructions as appropriate), so does
        not yet produce the most compact form possible.  The general design of the linker