@@ -1,5 +1,16 @@
 2010-08-10  Patrick Gansterer  <paroga@paroga.com>
 
+        Reviewed by Eric Seidel.
+
+        Make FastMalloc more portable.
+        https://bugs.webkit.org/show_bug.cgi?id=41790
+
+        * wtf/FastMalloc.cpp:
+        (WTF::TCMalloc_Central_FreeList::Populate):
+        (WTF::TCMalloc_ThreadCache::CreateCacheIfNecessary):
+
+2010-08-10  Patrick Gansterer  <paroga@paroga.com>
+
         Reviewed by David Levin.
 
         [WINCE] Buildfix for CE 6.0
